--- a/membershipexpiry.ui
+++ b/membershipexpiry.ui
@@ -23,13 +23,13 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>16</x>
      <y>540</y>
-     <width>499</width>
-     <height>32</height>
+     <width>691</width>
+     <height>35</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
