--- a/memberpurchase.ui
+++ b/memberpurchase.ui
@@ -23,13 +23,13 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>430</y>
-     <width>341</width>
-     <height>121</height>
+     <x>20</x>
+     <y>410</y>
+     <width>721</width>
+     <height>156</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
