--- a/admin.ui
+++ b/admin.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(255, 238, 89)</string>
+     <string notr="true"/>
     </property>
    </widget>
    <widget class="QPushButton" name="exitButton">
@@ -42,7 +42,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(241, 115, 0)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Log Out</string>
@@ -67,9 +67,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>140</x>
       <y>100</y>
-      <width>281</width>
+      <width>441</width>
       <height>41</height>
      </rect>
     </property>
@@ -98,7 +98,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(241, 115, 0)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Membership Conversions</string>
@@ -122,7 +122,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(105, 146, 255)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Manage Members</string>
@@ -143,7 +143,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(255, 238, 89)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Manage Inventory</string>
@@ -156,7 +156,7 @@
      <x>0</x>
      <y>0</y>
      <width>584</width>
-     <height>17</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuSettings">
