--- a/manageinventory.ui
+++ b/manageinventory.ui
@@ -47,7 +47,7 @@
      <x>10</x>
      <y>710</y>
      <width>521</width>
-     <height>28</height>
+     <height>40</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -68,7 +68,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(241, 115, 0)</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Delete Row</string>
@@ -83,7 +83,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color:rgb(255, 238, 89)</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Add Row</string>
@@ -100,7 +100,7 @@
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(105, 146, 255)</string>
+         <string notr="true"/>
         </property>
         <property name="text">
          <string>Save</string>
@@ -115,7 +115,7 @@
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(241, 115, 0)</string>
+         <string notr="true"/>
         </property>
         <property name="text">
          <string>Cancel</string>
