--- a/membershipexpiry.ui
+++ b/membershipexpiry.ui
@@ -23,13 +23,13 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>210</x>
      <y>540</y>
      <width>499</width>
-     <height>32</height>
+     <height>38</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -68,7 +68,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(105, 146, 255)</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Search</string>
@@ -95,7 +95,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(241, 115, 0)</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Cancel</string>
