--- a/rebatewindow.ui
+++ b/rebatewindow.ui
@@ -28,7 +28,7 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(241, 115, 0)</string>
+    <string notr="true"/>
    </property>
    <property name="text">
     <string>Close</string>
