--- a/storemanager.ui
+++ b/storemanager.ui
@@ -32,7 +32,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(255, 238, 89)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Member Rebates</string>
@@ -53,7 +53,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(0, 139, 0)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Member Purchases</string>
@@ -74,7 +74,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(105, 146, 255)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Membership Expiry</string>
@@ -95,7 +95,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(241, 115, 0)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Item Inventory</string>
@@ -119,7 +119,7 @@
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(255, 238, 89)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Sales Report</string>
@@ -128,9 +128,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>130</x>
       <y>110</y>
-      <width>281</width>
+      <width>461</width>
       <height>41</height>
      </rect>
     </property>
@@ -153,7 +153,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(255, 238, 89)</string>
+     <string notr="true"/>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -216,7 +216,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(105, 146, 255)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string notr="true">New Purchase</string>
@@ -237,7 +237,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(241, 115, 0)</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Logout</string>
