--- a/membershipexpiry.ui
+++ b/membershipexpiry.ui
@@ -26,10 +26,10 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>16</x>
+     <x>210</x>
      <y>540</y>
-     <width>691</width>
-     <height>35</height>
+     <width>499</width>
+     <height>38</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -68,7 +68,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(105, 146, 255)</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Search</string>
@@ -95,7 +95,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(241, 115, 0)</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Cancel</string>
