Fix login methods
Remove salt & hash method because security is a bitch

--- a/addmember.ui
+++ b/addmember.ui
@@ -39,7 +39,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="exitWindow">
       <property name="font">
        <font>
         <pointsize>12</pointsize>
