--- a/storemanager.ui
+++ b/storemanager.ui
@@ -2,19 +2,38 @@
 <ui version="4.0">
  <class>StoreManager</class>
  <widget class="QMainWindow" name="StoreManager">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>584</width>
-    <height>408</height>
+    <width>579</width>
+    <height>403</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>Serif</family>
+    <pointsize>15</pointsize>
+   </font>
+  </property>
+  <property name="cursor">
+   <cursorShape>ArrowCursor</cursorShape>
   </property>
   <property name="windowTitle">
    <string>Store Manager</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">
+QPushButton{
+	border: 2px solid rgb(37,39,48);
+	border-radius: 20px;
+	color: #FFF;
+	background-color: rgb(34,36,44);
+	
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="member_rebates">
@@ -73,6 +92,9 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
     <property name="styleSheet">
      <string notr="true"/>
     </property>
@@ -93,6 +115,9 @@
      <font>
       <pointsize>12</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
@@ -115,6 +140,9 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
@@ -126,6 +154,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="label">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -141,19 +172,6 @@
     </property>
     <property name="text">
      <string>Welcome Store Manager</string>
-    </property>
-   </widget>
-   <widget class="QGraphicsView" name="graphicsView_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>671</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -175,10 +193,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>130</x>
       <y>10</y>
-      <width>240</width>
-      <height>53</height>
+      <width>265</width>
+      <height>72</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -244,7 +262,6 @@
     </property>
    </widget>
    <zorder>layoutWidget</zorder>
-   <zorder>graphicsView_2</zorder>
    <zorder>member_rebates</zorder>
    <zorder>member_purchases</zorder>
    <zorder>membership_expiry_search</zorder>
